# GLaDOS

./: .gitignore  Demo.hs  ExempleParser.hs  ExplicationCompiler.hs  ExplicationSimple.hs  Makefile  README.md  TechnologyDocumentation.md  auto_stack.sh  glados  glados.cabal  package.yaml  run_tests.sh  stack.yaml  stack_auto.sh  test.scm  test_category.sh
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
.stack-work/: stack.sqlite3
.vscode-tools/: hspec-discover
app/: Main.hs  Main.hs.bk
bonus/: Outputs.hs  Pointers.hs  gitcleaner.sh
compilator/app/: Main.hs
dist-newstyle/cache/: config
docs/: Security.md  callflow.md  grammar.bnf  technologyDoc.md
docs/mdbook/: book.toml
examples/: cond.my
scm/: Boolean.scm  Multiple.scm  examplePDF.scm
src/: Builtins.hs  Compiler.hs  Enviroment.hs  Environment.hs  Lib.hs  Parser.hs  TypeChecker.hs  Types.hs  VirtualMachine.hs
src/AST/: AST.hs  Helpers.hs
src/Bytecode/: BcTypes.hs  Serialize.hs
src/Compiler/: Compiler.hs  Core.hs  Environment.hs  Expr.hs  Function.hs  Statement.hs
src/Error/: Types.hs
src/Evaluator/: Apply.hs  Core.hs  Helpers.hs  Special.hs
src/IR/: TextFormat.hs  Types.hs
src/Linker/: BinaryInstances.hs  Linker.hs  ObjectCompiler.hs  Types.hs
src/Parser/: Atomic.hs  Compound.hs  Core.hs  Expr.hs  FloatLit.hs  Function.hs  Helper.hs  Helpers.hs  Lexer.hs  Program.hs  Statement.hs  Types.hs
src/Security/: Environment.hs  ErrorFormat.hs  ExprChecker.hs  OperatorChecks.hs  ReturnChecker.hs  StatementCheckers.hs  TypeChecker.hs  TypeInference.hs  Types.hs
src/VM/: HelperFunc.hs  InstructionHandlers.hs  Interpreter.hs
tests/: BCSpec.hs  BuiltinsSpec.hs  CompilerSpec.hs  ErrorSpec.hs  EvaluatorSpec.hs  FloatSpec.hs  HardSpec.hs  MainSpec.hs  ParserSpec.hs  Spec.hs  TypeCheckerSpec.hs  VMSpec.hs  VirtualMachineSpec.hs
tests/dotC/: control_flow.c  factorial.c  test.c  (+91 more)
workflows/: ci.yml  release.yml
(+97 files in other folders)
